# datasaude-worker

./: Dockerfile  docker-compose.yml  pyproject.toml  run_worker.py
.github/workflows/: deploy.yml
docker/: Dockerfile  startup.sh
dto/: paciente.py  paciente_coordenadas_request.py  paciente_internacao.py  paciente_interpolacao_request.py  paciente_request.py
integrations/: datasaude_api.py
listeners/: config.py  geolocalizacao_listener.py  interpolacao_listener.py  paciente_listener.py
